--- a/templates/default/nginx_site.erb
+++ b/templates/default/nginx_site.erb
@@ -3,6 +3,15 @@ upstream <%= @name %>_proxy {
 }
 
 server {
+  <% if @enable_ssl %>
+    listen   443;
+
+    ssl    on;
+    ssl_certificate    <%= @ssl_cert %>;
+    ssl_certificate_key   <%= @ssl_key %>;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  <% end %>
+
   listen 80 default deferred;
   client_max_body_size 4G;
   server_name _;
