--- a/templates/default/nginx_site.erb
+++ b/templates/default/nginx_site.erb
@@ -4,13 +4,13 @@ upstream <%= @name %>_proxy {
 
 server {
   <% if @enable_ssl %>
-    listen   443 default;
+  listen 443 ssl;
 
-    ssl    on;
-    ssl_certificate    <%= @ssl_cert %>;
-    ssl_certificate_key   <%= @ssl_key %>;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_certificate    <%= @ssl_cert %>;
+  ssl_certificate_key   <%= @ssl_key %>;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
   <% end %>
+  listen 80;
 
   client_max_body_size 4G;
   server_name _;
@@ -23,7 +23,7 @@ server {
     proxy_set_header   Host              $http_host;
 
     proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-    proxy_set_header   X-Forwarded-Proto $scheme;
+    proxy_set_header   X-Forwarded-Proto $http_x_forwarded_proto;
     proxy_set_header   X-Forwarded-Ssl   on;
     proxy_set_header   X-Real-IP         $remote_addr;
 
@@ -31,48 +31,14 @@ server {
     proxy_pass http://<%= @name %>_proxy;
   }
 
-<% if @environment == 'production' %>
+  <% if @environment == 'production' %>
   location ~ ^/(assets)/ {
         root <%= @install_path %>/public;
         gzip_static on;
         expires max;
         add_header Cache-Control public;
   }
-<% end %>
-  error_page 500 502 503 504 /500.html;
-  location = /500.html {
-    root <%= @install_path %>/public;
-  }
-}
-server {
-  listen 80 deferred;
-  client_max_body_size 4G;
-  server_name _;
-
-  root <%= @install_path %>/public;
-  try_files $uri/index.html $uri.html $uri @app;
-
-  location @app {
-    proxy_set_header   CLIENT_IP         $remote_addr;
-    proxy_set_header   Host              $http_host;
-
-    proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-    proxy_set_header   X-Forwarded-Proto $scheme;
-    proxy_set_header   X-Forwarded-Ssl   on;
-    proxy_set_header   X-Real-IP         $remote_addr;
-
-    proxy_redirect off;
-    proxy_pass http://<%= @name %>_proxy;
-  }
-
-<% if @environment == 'production' %>
-  location ~ ^/(assets)/ {
-        root <%= @install_path %>/public;
-        gzip_static on;
-        expires max;
-        add_header Cache-Control public;
-  }
-<% end %>
+  <% end %>
   error_page 500 502 503 504 /500.html;
   location = /500.html {
     root <%= @install_path %>/public;
