fixing deployment of id

--- a/templates/default/nginx_site.erb
+++ b/templates/default/nginx_site.erb
@@ -20,11 +20,13 @@ server {
 
   location @app {
     proxy_set_header   CLIENT_IP         $remote_addr;
-    proxy_set_header   Host              $http_host;
+    proxy_set_header   Host              $proxy_host:$server_port;
 
     proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+    <% if @enable_ssl %>
     proxy_set_header   X-Forwarded-Proto $http_x_forwarded_proto;
     proxy_set_header   X-Forwarded-Ssl   on;
+    <% end %>
     proxy_set_header   X-Real-IP         $remote_addr;
 
     proxy_redirect off;
