--- a/templates/default/nginx_site.erb
+++ b/templates/default/nginx_site.erb
@@ -1,4 +1,4 @@
-upstream <%= @name %>_proxy {
+upstream <%= @name %> {
   server localhost:<%= @port %> fail_timeout=1;
 }
 
@@ -30,7 +30,7 @@ server {
     proxy_set_header   X-Real-IP         $remote_addr;
 
     proxy_redirect off;
-    proxy_pass http://<%= @name %>_proxy;
+    proxy_pass http://<%= @name %>;
   }
 
   <% if @environment == 'production' %>
